# bytewax-hopsworks-example

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  set_environment_variables.sh  set_environment_variables_template.sh  setup-ec2.sh
scripts/: insert_data_to_feature_group.py
src/: config.py  dataflow.py  date_utils.py  feature_store_api.py  flow_steps.py  frontend.py  logger.py  plot.py  technical_indicators.py  types.py
